# poclauncher

./: .gitignore  CMakeLists.txt  COPYING.md  README.md  main.cpp
Core/: CMakeLists.txt
Core/include/Core/: Application.h  BuildConfig.h  PluginLoader.h
Core/include/Core/util/: DesktopServices.h  Markdown.h  MessageBox.h
Core/res/docs/: credits.html  docs.qrc
Core/res/icons/: icons.qrc
Core/res/icons/multimc/: index.theme  multimc.qrc
Core/src/: Application.cpp  BuildConfig.in.cpp  PluginLoader.cpp  StaticPluginImports.cpp  main.cpp
Core/src/ui/: AboutDialog.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
Core/src/util/: DesktopServices.cpp  Markdown.cpp  MessageBox.cpp
NewsPlugin/: CMakeLists.txt  plugin.json
NewsPlugin/include/NewsPlugin/: NewsPlugin.h
NewsPlugin/src/: NewsPlugin.cpp
cmake/: Variables.cmake
common/: CMakeLists.txt
common/include/common/: BuildConfig.h  Markdown.h
common/src/: BuildConfig.in.cpp  CustomMessageBox.cpp  Markdown.cpp
plugins/core/: CMakeLists.txt  plugin.json
plugins/core/src/: CorePlugin.cpp  CorePlugin.h  bootstrap.cpp
plugins/core/src/ui/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/: main.cpp
